# dni_robocze

./: .gitignore  LICENSE  README.md  dni_robocze.py  dni_robocze_gui.py  pyproject.toml
